--- a/CampCategorySearch-PTS/Index.html
+++ b/CampCategorySearch-PTS/Index.html
@@ -283,7 +283,7 @@
       <summary>Version History</summary>
       <div class="changelog-entry">
         <h4>v2.3.1</h4>
-        <ul><li>Fixed issue that caused crops to not have preview images</li></ul>
+        <ul><li>Fixed issue that caused crops and certain defensive structures to not have preview images</li></ul>
       </div>
       <div class="changelog-entry">
         <h4>v2.3</h4>
