--- a/76Tools.html
+++ b/76Tools.html
@@ -12,7 +12,6 @@
   <title>MrsBlobby’s Fallout 76 Tools Hub</title>
   <style>
     :root {
-      --accent: #ffc00f;
       --bg: #1a1a1a;
       --card-bg: #2a2a2a;
       --text: #e0e0e0;
@@ -33,7 +32,7 @@
     }
 
     header h1 {
-      color: var(--accent);
+      color: #ffc00f;
       margin-bottom: 10px;
       font-size: 2.4em;
     }
@@ -45,23 +44,26 @@
     }
 
     main {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       gap: 24px;
-      max-width: 1000px;
+      max-width: 900px;
       margin: 40px auto;
       padding: 0 20px;
     }
 
     .tool-card {
       background-color: var(--card-bg);
-      border: 2px solid var(--accent);
-      border-radius: 8px;
+      border: 2px solid var(--accent, #ffc00f); /* fallback accent */
+      border-radius: 10px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.4);
       overflow: hidden;
       transition: transform 0.2s, box-shadow 0.2s;
+      width: 100%;
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
+      gap: 0;
     }
 
     .tool-card:hover {
@@ -70,48 +72,47 @@
     }
 
     .tool-card img {
-      width: 100%;
-      height: 180px;
+      width: 40%;
+      height: 100%;
       object-fit: cover;
+      flex-shrink: 0;
     }
 
     .tool-card-content {
-      padding: 16px;
+      padding: 20px;
       flex: 1;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      justify-content: center;
     }
 
     .tool-card h2 {
-      color: var(--accent);
-      font-size: 20px;
+      color: var(--accent, #ffc00f);
+      font-size: 22px;
       margin: 0 0 8px 0;
-      text-align: center;
     }
 
     .tool-card p {
-      font-size: 14px;
+      font-size: 15px;
       color: var(--text-muted);
-      text-align: center;
-      flex: 1;
+      margin-bottom: 16px;
     }
 
     .tool-card a {
       display: inline-block;
       text-align: center;
-      background: var(--accent);
+      background: var(--accent, #ffc00f);
       color: black;
       text-decoration: none;
       padding: 8px 14px;
-      margin-top: 14px;
       border-radius: 4px;
       font-weight: bold;
+      width: fit-content;
       transition: background 0.2s;
     }
 
     .tool-card a:hover {
-      background: #ffda59;
+      background: color-mix(in srgb, var(--accent, #ffc00f) 80%, white);
     }
 
     footer {
@@ -122,12 +123,17 @@
       border-top: 1px solid var(--card-bg);
     }
 
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 1.8em;
+    @media (max-width: 700px) {
+      .tool-card {
+        flex-direction: column;
       }
-      main {
-        grid-template-columns: 1fr;
+      .tool-card img {
+        width: 100%;
+        height: auto;
+      }
+      .tool-card-content {
+        text-align: center;
+        align-items: center;
       }
     }
   </style>
@@ -139,7 +145,7 @@
   </header>
 
   <main>
-    <div class="tool-card">
+    <div class="tool-card" style="--accent: #ffc00f;">
       <img src="/assets/CoverImage.png" alt="Fallout 76 C.A.M.P. Item Lookup">
       <div class="tool-card-content">
         <h2>C.A.M.P. Item Lookup</h2>
@@ -148,30 +154,21 @@
       </div>
     </div>
 
-    <div class="tool-card">
-      <img src="/assets/TextureToolCover.png" alt="Texture Recoloring Tool">
+    <div class="tool-card" style="--accent: #73e8ff;">
+      <img src="/assets/CoverImagePTS.png" alt="Fallout 76 C.A.M.P. Item Lookup (PTS)">
+      <div class="tool-card-content">
+        <h2>C.A.M.P. Item Lookup (PTS)</h2>
+        <p>Experimental PTS version of the C.A.M.P. Lookup tool with updated data and structures.</p>
+        <a href="https://mrsblobby.github.io/CAMPCategorySearchPTS/Index.html">Visit Tool</a>
+      </div>
+    </div>
+
+    <div class="tool-card" style="--accent: #ff7f50;">
+      <img src="/assets/TextureToolCover.png" alt="Texture Recolor Tool">
       <div class="tool-card-content">
         <h2>Texture Recolor Tool</h2>
         <p>Batch-convert, resize, and recolor Fallout 76 texture files with automatic dominant color detection.</p>
         <a href="https://mrsblobby.github.io/TextureTool/">Visit Tool</a>
-      </div>
-    </div>
-
-    <div class="tool-card">
-      <img src="/assets/COBJExtractorCover.png" alt="COBJ Extractor">
-      <div class="tool-card-content">
-        <h2>COBJ Extractor</h2>
-        <p>xEdit script and CSV exporter for COBJ data including BOOK and ENTM links.</p>
-        <a href="https://mrsblobby.github.io/COBJExtractor/">Visit Tool</a>
-      </div>
-    </div>
-
-    <div class="tool-card">
-      <img src="/assets/SoundToolCover.png" alt="Sound Browser">
-      <div class="tool-card-content">
-        <h2>Sound Asset Browser</h2>
-        <p>Browse Fallout 76 BSA/BA2 audio files and extract sound data efficiently.</p>
-        <a href="https://mrsblobby.github.io/SoundBrowser/">Visit Tool</a>
       </div>
     </div>
   </main>
