--- a/76Tools.html
+++ b/76Tools.html
@@ -63,9 +63,9 @@
       padding: 0 20px;
     }
 
-    .tool-card {
+      .tool-card {
       background-color: var(--card-bg);
-      border: 2px solid var(--accent, #ffc00f); /* fallback accent */
+      border: 2px solid var(--accent, #ffc00f);
       border-radius: 10px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.4);
       overflow: hidden;
@@ -73,8 +73,10 @@
       width: 100%;
       display: flex;
       flex-direction: row;
+      align-items: center; 
       gap: 0;
     }
+
 
     .tool-card:hover {
       transform: translateY(-4px);
