--- a/76Tools.html
+++ b/76Tools.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="MrsBlobby's Fallout 76 Tools">
-  <meta property="og:description" content="Tools related to Fallout 76 made by MrsBlobby"
-  <meta property="og:image" content="https://raw.githubusercontent.com/MrsBlobby/mrsblobby.github.io/main/assets/76Logo.png"
+  <meta property="og:description" content="Tools related to Fallout 76 made by MrsBlobby">
+  <meta property="og:image" content="https://raw.githubusercontent.com/MrsBlobby/mrsblobby.github.io/main/assets/76Logo.png">
   <meta property="og:url" content="https://mrsblobby.github.io/">
   <meta property="og:type" content="website">
   <link rel="icon" type="image/svg" href="/assets/svg/76Logo.svg">
-  <title>Fallout 76 Tools<title>
+  <title>Fallout 76 Tools</title>
   <style>
     :root {
       --bg: #1a1a1a;
