--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -274,7 +274,12 @@
   <div class="container">
     <img src="/assets/CoverImage.png" alt="Fallout 76 C.A.M.P. Item Lookup" style="display: block; margin: 0 auto; max-width: 100%; height: auto;">
     <div class="meta">
-      <p style="color: var(--text-muted); font-size: 14px;">Made by MrsBlobby</p>
+    <p style="color: var(--text-muted); font-size: 14px;">
+Made by MrsBlobby | 
+     <a href="https://mrsblobby.github.io/76Tools.html" style="color: var(--accent); text-decoration:none;">
+    Other tools
+       </a>
+      </p>
       <p style="color: var(--text-muted); font-size: 12px;">Last Updated: October 19, 2025</p>
     </div>
 
