--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -11,41 +11,37 @@
   <link rel="icon" type="image/svg" href="/assets/svg/CAMPIcon.svg">
   <title>Fallout 76 C.A.M.P. Item Database</title>
  <style>
-:root {
-  --accent: #ffc00f;
-  --accent-dim: #ffb300;
-  --bg: #1a1a1a;
-  --card-bg: #2a2a2a;
-  --text: #e0e0e0;
-  --text-muted: #aaa;
-  --content-width: 800px;
-  --card-width: 720px;
-}
+  :root {
+    --accent: #ffc00f;
+    --accent-dim: #ffb300;
+    --bg: #1a1a1a;
+    --card-bg: #2a2a2a;
+    --text: #e0e0e0;
+    --text-muted: #aaa;
+    --content-width: 800px;
+    --card-width: 720px;
+  }
 
-* {
-  box-sizing: border-box;
-}
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    background-color: var(--bg);
+    color: var(--text);
+  }
 
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  background-color: var(--bg);
-  color: var(--text);
-}
+  .container {
+    max-width: var(--content-width);
+    margin: 0 auto;
+    padding: 0 16px;
+  }
 
-.container {
-  max-width: var(--content-width);
-  margin: 0 auto;
-  padding: 0 16px;
-}
+  h1 {
+    color: var(--accent);
+    margin-bottom: 5px;
+    text-align: center;
+  }
 
-h1 {
-  color: var(--accent);
-  margin-bottom: 5px;
-  text-align: center;
-}
-
-.meta {
+ .meta {
   text-align: center;
   margin-top: 0.5em;
 }
@@ -76,23 +72,25 @@ h1 {
   margin-top: 4px;
 }
 
-#pagination button {
-  padding: 6px 10px;
-  background: var(--card-bg);
-  color: var(--text);
-  border: 1px solid var(--accent);
-  border-radius: 4px;
-  cursor: pointer;
-  transition: 0.2s;
-}
-#pagination button:hover:not(:disabled) {
-  background: var(--accent);
-  color: black;
-}
-#pagination button:disabled {
-  opacity: 0.4;
-  cursor: default;
-}
+
+
+  #pagination button {
+    padding: 6px 10px;
+    background: var(--card-bg);
+    color: var(--text);
+    border: 1px solid var(--accent);
+    border-radius: 4px;
+    cursor: pointer;
+    transition: 0.2s;
+  }
+  #pagination button:hover:not(:disabled) {
+    background: var(--accent);
+    color: black;
+  }
+  #pagination button:disabled {
+    opacity: 0.4;
+    cursor: default;
+  }
 
 .controls {
   position: sticky;
@@ -107,23 +105,22 @@ h1 {
   gap: 12px;
 }
 
-.controls input[type="text"] {
-  padding: 10px;
-  font-size: 16px;
-  width: 100%;
-  max-width: 350px;
-  border: 2px solid var(--accent);
-  border-radius: 6px;
-  background-color: var(--card-bg);
-  color: var(--text);
-}
+  .controls input[type="text"] {
+    padding: 10px;
+    font-size: 16px;
+    width: 100%;
+    max-width: 350px;
+    border: 2px solid var(--accent);
+    border-radius: 6px;
+    background-color: var(--card-bg);
+    color: var(--text);
+  }
 
 .controls .search-line {
   display: flex;
   gap: 0;
   width: 100%;
   max-width: 450px;
-  align-items: center;
 }
 
 .search-line input:focus,
@@ -131,6 +128,46 @@ h1 {
 .search-line textarea:focus {
   outline: none;
   box-shadow: none;
+}
+
+.search-line input {
+  -webkit-appearance: none;
+}
+
+.search-line {
+  display: flex;
+  gap: 0;
+  width: 100%;
+  max-width: 450px;
+  align-items: center; 
+}
+
+  .controls label {
+    font-size: 14px;
+    color: var(--text-muted);
+    margin-left: 4px;
+  }
+
+  .controls .inline-group {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    justify-content: center;
+    margin-top: 8px;
+  }
+
+.inline-group {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  justify-content: center;
+  margin-top: 8px;
+}
+
+
+.inline-group label {
+  font-size: 14px;
+  color: var(--text-muted);
 }
 
 .group-filters {
@@ -142,176 +179,164 @@ h1 {
 .group-sort {
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 8px; 
 }
 
-.inline-group {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-  justify-content: center;
-  margin-top: 8px;
-}
+  ul {
+    list-style-type: none;
+    padding: 16px;
+    margin: 0 auto;
+    max-width: 600px;
+  }
 
-.inline-group label {
-  font-size: 14px;
-  color: var(--text-muted);
-}
+  li {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    padding: 12px;
+    background-color: var(--card-bg);
+    margin-bottom: 14px;
+    border-radius: 6px;
+    border: 2px solid var(--accent);
+    box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+    width: 100%;
+  }
 
-ul {
-  list-style-type: none;
-  padding: 16px;
-  margin: 0 auto;
-  max-width: 600px;
-}
+  .result-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-shrink: 0;
+    width: 220px;
+  }
 
-li {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-  padding: 12px;
-  background-color: var(--card-bg);
-  margin-bottom: 14px;
-  border-radius: 6px;
-  border: 2px solid var(--accent);
-  box-shadow: 0 2px 6px rgba(0,0,0,0.4);
-  width: 100%;
-}
+  .result-name {
+    font-weight: bold;
+    font-size: 18px;
+    color: var(--accent);
+    margin-bottom: 6px;
+    text-align: center;
+  }
 
-.result-left {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-shrink: 0;
-  width: 220px;
-}
+  .result-left img {
+    border-radius: 6px;
+    max-width: 128px;
+    height: auto;
+    object-fit: contain;
+    display: block;
+  }
 
-.result-name {
-  font-weight: bold;
-  font-size: 18px;
-  color: var(--accent);
-  margin-bottom: 6px;
-  text-align: center;
-}
+  .result-right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    text-align: center;
+    width: 100%;
+    justify-content: center;
+  }
 
-.result-left img {
-  border-radius: 6px;
-  max-width: 128px;
-  height: auto;
-  object-fit: contain;
-  display: block;
-}
+  .result-right .section-header {
+    font-weight: 700;
+    font-size: 14px;
+    color: var(--accent);
+    text-align: center;
+    margin: 4px 0;
+  }
 
-.result-right {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 8px;
-  text-align: center;
-  width: 100%;
-  justify-content: center;
-}
+  .result-right span.pill {
+    background: var(--bg);
+    border: 2px solid var(--accent);
+    border-radius: 20px;
+    padding: 3px 10px;
+    font-size: 14px;
+    color: var(--accent);
+    font-weight: normal;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
 
-.result-right .section-header {
-  font-weight: 700;
-  font-size: 14px;
-  color: var(--accent);
-  text-align: center;
-  margin: 4px 0;
-}
+  .inline-wrap {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+    flex-wrap: wrap;
+  }
 
-.result-right span.pill {
-  background: var(--bg);
-  border: 2px solid var(--accent);
-  border-radius: 20px;
-  padding: 3px 10px;
-  font-size: 14px;
-  color: var(--accent);
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
+  .connector {
+    color: var(--accent);
+    font-weight: 600;
+    font-size: 13px;
+    margin: 0 6px;
+    line-height: 1;
+  }
 
-.inline-wrap {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  gap: 6px;
-  flex-wrap: wrap;
-}
+  .arrow {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-left: 10px solid var(--accent);
+    margin: 0 8px;
+    vertical-align: middle;
+  }
 
-.connector {
-  color: var(--accent);
-  font-weight: 600;
-  font-size: 13px;
-  margin: 0 6px;
-  line-height: 1;
-}
+  .inline-wrap .arrow + .arrow {
+    display: none;
+  }
 
-.arrow {
-  display: inline-block;
-  width: 0;
-  height: 0;
-  border-top: 6px solid transparent;
-  border-bottom: 6px solid transparent;
-  border-left: 10px solid var(--accent);
-  margin: 0 8px;
-  vertical-align: middle;
-}
+  .pill {
+    background: var(--bg);
+    border: 2px solid var(--accent);
+    border-radius: 20px;
+    padding: 4px 12px;
+    font-size: 14px;
+    color: var(--accent);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    line-height: 1.2;
+    max-width: 240px;
+    min-height: 30px;
+    word-break: break-word;
+  }
 
-.inline-wrap .arrow + .arrow {
-  display: none;
-}
+  details {
+    margin: 10px 0 20px 0;
+    font-size: 12px;
+    color: var(--text-muted);
+  }
 
-.pill {
-  background: var(--bg);
-  border: 2px solid var(--accent);
-  border-radius: 20px;
-  padding: 4px 12px;
-  font-size: 14px;
-  color: var(--accent);
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  line-height: 1.2;
-  max-width: 240px;
-  min-height: 30px;
-  word-break: break-word;
-}
+  details summary {
+    cursor: pointer;
+    font-weight: bold;
+    color: var(--accent);
+    text-align: center;
+    max-width: 200px;
+    margin: 0 auto;           
+    padding: 2px 6px;
+  }
 
-details {
-  margin: 10px 0 20px 0;
-  font-size: 12px;
-  color: var(--text-muted);
-}
+  .changelog-entry h4 {
+    margin: 0 0 4px 0;
+    font-size: 14px;
+    font-weight: bold;
+    color: var(--accent);
+  }
 
-details summary {
-  cursor: pointer;
-  font-weight: bold;
-  color: var(--accent);
-  text-align: center;
-  max-width: 200px;
-  margin: 0 auto;
-  padding: 2px 6px;
-}
-
-.changelog-entry h4 {
-  margin: 0 0 4px 0;
-  font-size: 14px;
-  font-weight: bold;
-  color: var(--accent);
-}
-
-.changelog-entry {
-  background: rgba(255, 192, 15, 0.05);
-  border-left: 3px solid var(--accent);
-  border-radius: 4px;
-  padding: 6px 12px;
-  margin: 6px 0;
-  text-align: left;
-}
+  .changelog-entry {
+    background: rgba(255, 192, 15, 0.05);
+    border-left: 3px solid var(--accent);
+    border-radius: 4px;
+    padding: 6px 12px;
+    margin: 6px 0;
+    text-align: left;
+  }
 
 #searchBox {
   flex: 1;
@@ -323,12 +348,13 @@ details summary {
   border-radius: 6px 0 0 6px;
   background-color: var(--card-bg);
   color: var(--text);
+  box-sizing: border-box;
 }
 
-#searchBox, #dropdownSelected {
-  width: 100%;
-  border-right: none; 
-}
+  #searchBox, #dropdownSelected {
+    width: 100%;
+    border-right: none; 
+  }
 
 #dropdownOptions {
   display: none;
@@ -340,6 +366,7 @@ details summary {
   margin-top: -2px;
   background-color: var(--card-bg);
   border: 2px solid var(--accent);
+  box-sizing: border-box;
   border-radius: 0 0 6px 6px;
   overflow: hidden;
   z-index: 200;
@@ -349,6 +376,7 @@ details summary {
   padding: 8px 12px;
   cursor: pointer;
 }
+
 
 #dropdownSelected {
   display: flex;
@@ -361,10 +389,11 @@ details summary {
   background-color: var(--card-bg);
   color: var(--text);
   cursor: pointer;
+  box-sizing: border-box;
 }
 
 #dropdownSelected.open {
-  border-radius: 0 6px 0 0;
+  border-radius: 0 6px 0 0; /* bottom-right sharp when dropdown is open */
 }
 
 .custom-dropdown {
@@ -386,7 +415,7 @@ details summary {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  gap: 6px;
+  gap: 6px; /* keeps space between text and icon if any */
   padding: 0 12px;
   font-size: 14px;
   line-height: 1;
@@ -395,11 +424,26 @@ details summary {
   background-color: var(--card-bg);
   color: var(--text);
   cursor: pointer;
+  box-sizing: border-box;
   vertical-align: middle;
 }
 
+#filtersDropdown,
+#sortDropdown {
+  display: inline-flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+
+#filtersDropdown, #sortDropdown {
+  margin: 0;
+  padding: 0;
+}
+
 #filtersDropdown {
-  width: 120px;
+  width: 120px;   
   position: relative;
 }
 
@@ -407,21 +451,17 @@ details summary {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 6px;
+  gap: 6px; 
+  padding: 0 12px;
   font-size: 14px;
   width: 100%;
-  height: 36px;
-  padding: 0 12px;
   border: 2px solid var(--accent);
   border-radius: 6px;
   background-color: var(--card-bg);
   color: var(--text);
   cursor: pointer;
   box-sizing: border-box;
-}
-
-#filtersButton.open {
-  border-radius: 6px 6px 0 0;
+  height: 36px;
 }
 
 #filtersButton .filter-icon {
@@ -433,83 +473,96 @@ details summary {
 
 .filter-columns {
   display: flex;
-  flex-direction: row;
-  gap: 12px;
+  flex-direction: column;
+  gap: 8px;
 }
 
 .filter-columns > div {
   flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
 }
 
 .filter-header {
   font-weight: bold;
   margin-bottom: 4px;
-  color: var(--accent);
 }
 
-#filtersOptions {
-  display: none; 
-  position: absolute;
-  top: 100%;
-  left: -60px; 
-  width: 240px; /* total width */
-  background-color: var(--card-bg);
-  border: 2px solid var(--accent);
-  border-radius: 0 0 6px 6px;
-  padding: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-  box-sizing: border-box;
-  z-index: 200;
-
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 12px;
-  row-gap: 8px;
+#filtersOptions button {
+  padding: 6px 10px;
+  border: 1px solid var(--accent);
+  border-radius: 4px;
+  background: var(--card-bg);
+  cursor: pointer;
 }
 
 #filtersOptions button[data-filter] {
-  display: block;
-  width: 100%;
-  padding: 6px 10px;
-  font-size: 14px;
-  border: 2px solid var(--accent);
-  border-radius: 6px;
-  background-color: var(--card-bg);
-  color: var(--accent);
-  text-align: center;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 4px 8px;
   cursor: pointer;
-  transition: 0.2s;
 }
 
 #filtersOptions button[data-filter].selected {
-  background-color: var(--accent);
+  background-color: #4f46e5;
+  color: white;
+  border-color: #4f46e5;
+}
+
+.filter-header {
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+
+#filtersButton.open {
+  border-radius: 6px 6px 0 0;
+}
+
+#filtersOptions {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  margin-top: -2px;
+  background-color: var(--card-bg);
+  border: 2px solid var(--accent);
+  border-radius: 0 0 6px 6px;
+  font-size: 14px;
+  z-index: 200;
+  overflow: hidden;
+}
+
+#filtersOptions .option {
+  padding: 8px 12px;
+  cursor: pointer;
+}
+
+#filtersOptions .option:hover {
+  background: var(--accent-dim);
   color: black;
-  border-color: var(--accent);
 }
 
 .clear-filters {
   margin-top: 8px;
-  background-color: #3a1a1a;
+  background-color: #ffeded;
   border: 1px solid #ff4d4f;
   color: #ff4d4f;
   border-radius: 4px;
-  padding: 6px 10px;
+  padding: 4px 8px;
   cursor: pointer;
-  transition: background 0.2s;
 }
 
 #sortSelected,
 #sortOptions,
-#filtersButton {
+#filtersButton,
+#filtersOptions {
   width: 100%;
+  box-sizing: border-box;
 }
 
 #sortDropdown {
   position: relative;
-  width: 150px;
+  width: 150px; 
   height: 36px;
   display: flex;
   flex-shrink: 0;
@@ -526,6 +579,7 @@ details summary {
   background-color: var(--card-bg);
   color: var(--text);
   cursor: pointer;
+  box-sizing: border-box;
 }
 
 #sortSelected.open {
@@ -557,41 +611,34 @@ details summary {
   color: black;
 }
 
-@media (max-width: 500px) {
-  #filtersOptions {
-    grid-template-columns: 1fr;
-    width: 100%; /* fills parent width */
-    left: 0; /* align with button */
-  }
-}
 
-@media (max-width: 600px) {
-  li {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+  @media (max-width: 600px) {
+    li {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+    .result-left {
+      max-width: none;
+    }
+    .result-right {
+      justify-content: center;
+      margin-top: 10px;
+    }
+    .result-right span.pill {
+      font-size: 12px;
+      padding: 2px 6px;
+    }
+    .result-right span.arrow {
+      border-top: 4px solid transparent;
+      border-bottom: 4px solid transparent;
+      border-left: 8px solid var(--accent);
+      margin: 0 4px;
+    }
+    .controls {
+      flex-direction: column;
+    }
   }
-  .result-left {
-    max-width: none;
-  }
-  .result-right {
-    justify-content: center;
-    margin-top: 10px;
-  }
-  .result-right span.pill {
-    font-size: 12px;
-    padding: 2px 6px;
-  }
-  .result-right span.arrow {
-    border-top: 4px solid transparent;
-    border-bottom: 4px solid transparent;
-    border-left: 8px solid var(--accent);
-    margin: 0 4px;
-  }
-  .controls {
-    flex-direction: column;
-  }
-}
 </style>
 </head>
 <body>
